src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Annual_Total_Excl_VAT__c</fullName>
        <formula>Monthly_Total_Excl_VAT__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Total (Excl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Total_Incl_VAT__c</fullName>
        <formula>Monthly_Total_Incl_VAT__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Total (Incl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Cost_Excl_VAT__c</fullName>
        <label>Base Cost(Excl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Cost_Incl_VAT__c</fullName>
        <label>Base Cost(Incl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAF_Approved__c</fullName>
        <label>CAF Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <label>Contract Signed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_Invoice_To_AM__c</fullName>
        <label>Copy Invoice To AM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_PO_Number__c</fullName>
        <label>Customer PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_Cost_Excl_VAT__c</fullName>
        <label>Device Cost (Excl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Cost_Incl_VAT__c</fullName>
        <label>Device Cost (Incl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Cost_exc_VAT__c</fullName>
        <label>Device Cost (exc VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Cost_inc_VAT__c</fullName>
        <label>Device Cost (inc. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Invoice_Cost_Excl_VAT__c</fullName>
        <formula>(Device_Cost_Excl_VAT__c)*( Number_Of_DAZN_TV_Devices_To_Send__c -  Number_Of_Devices_Discounted__c ) +  Monthly_Total_Excl_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Invoice Cost (Excl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Invoice_Cost_Incl_VAT__c</fullName>
        <formula>(Device_Cost_Incl_VAT__c)*(Number_Of_DAZN_TV_Devices_To_Send__c - Number_Of_Devices_Discounted__c) +  Monthly_Total_Incl_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Invoice Cost (Incl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Invoice_Cost_inc_VAT__c</fullName>
        <label>First Invoice Cost (inc. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Total_Excl_VAT__c</fullName>
        <formula>Base_Cost_Excl_VAT__c -  (Subscription_Discount__c/12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Total (Excl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Total_Incl_VAT__c</fullName>
        <formula>Base_Cost_Incl_VAT__c -  (Subscription_Discount__c/12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Total (Incl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Total_exc_VAT__c</fullName>
        <label>Monthly Total (exc. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Total_inc_VAT__c</fullName>
        <label>Monthly Total (inc. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Amino_Boxes_To_Send__c</fullName>
        <label>Number Of Amino Boxes To Send</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_DAZN_TV_Devices_To_Send__c</fullName>
        <label>Number Of DAZN TV Devices To Send</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Devices_Discounted__c</fullName>
        <label>Number Of Devices Discounted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>Promo code applied for gastronomy</description>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Country__c</fullName>
        <description>this valueset contains ISO 3166-1 alpha-2 codes and country names. An alpha-2 code is an two-letter country code defined in ISO 3166-1, part of the ISO 3166 standard</description>
        <label>Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Name_By_Alpha_2_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Address_Post_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Street__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Discount__c</fullName>
        <label>Subscription Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Renewal_Date__c</fullName>
        <label>Subscription Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Device_Cost_Excl_VAT__c</fullName>
        <formula>Device_Cost_Excl_VAT__c * ( Number_Of_DAZN_TV_Devices_To_Send__c -  Number_Of_Devices_Discounted__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Device Cost (Excl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Device_Cost_Incl_VAT__c</fullName>
        <formula>Device_Cost_Incl_VAT__c * ( Number_Of_DAZN_TV_Devices_To_Send__c -  Number_Of_Devices_Discounted__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Device Cost (Incl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Invalidated_Close_Date</fullName>
        <active>true</active>
        <errorConditionFormula>CloseDate &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Close date is less than today&apos;s date. Please check your input data.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalidated_Delivery_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Delivery_Date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Delivery_Date__c</errorDisplayField>
        <errorMessage>Delivery date less than today&apos;s date. Please check your input data.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalidated_Number_Of_Devices_Discounted</fullName>
        <active>true</active>
        <errorConditionFormula>Number_Of_Devices_Discounted__c &gt;  Number_Of_DAZN_TV_Devices_To_Send__c</errorConditionFormula>
        <errorDisplayField>Number_Of_Devices_Discounted__c</errorDisplayField>
        <errorMessage>Number of devices discounted is greater than number of DAZN TV devices to send. Please check your input data.</errorMessage>
    </validationRules>
</CustomObject>